Correct Contact modal close icon color on mobile

--- a/src/scss/modules/contact-modal/contact-modal.scss
+++ b/src/scss/modules/contact-modal/contact-modal.scss
@@ -58,6 +58,10 @@
       }
     }
   } 
+
+  .home-icon__close-line {
+    stroke: #fff;
+  }
 }
 
 @keyframes modalSlideIn {
